kubernetes/demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  type: NodePort
  ports:
    - port: 80
      name: http
      nodePort: 30080
      protocol: TCP
      targetPort: 80
    - port: 443
      name: ssl
      nodePort: 30443
      protocol: TCP
      targetPort: 443
  selector:
    app: k8s-demo-pod
